--- a/styles/main.css
+++ b/styles/main.css
@@ -3,42 +3,38 @@
 	margin: 0; 
 	text-align: center;
 	font-family: 'Alegreya Sans', sans-serif;
+	color: #E8DDB5;
 }
 
 
 section	{ height: 800px; }
+section:nth-of-type(1) { background-color: #788AA3; }
+section:nth-of-type(2) { background-color: #92B6B1; }
+section:nth-of-type(3) { background-color: #B2C9AB; }
 
-section:nth-of-type(1) {
-	background-color: lightblue;
+.name-container {
+	height: 100px;
+	border: 1px solid #E8DDB5;
+	border-radius: 15px;
 }
-
-section:nth-of-type(2) {
-	background-color: lightgreen;
-}
-
-section:nth-of-type(3) {
-	background-color: lightyellow;
-}
-
-
-
 
 h1 {
-	padding-top: 35%;
 	font-size: 50px;
 }
 
 .data {
-	padding-top: 15%
+	padding-top: 15%;
+	font-size: 1.5em;
 }
 
-/*.container { padding-top: 40%; }
+section:nth-of-type(3) > * { padding: 1em; }
 
-.container > * {
-	border: 1px solid darkgrey;
-	border-radius: 50px;
-	height: 70px; width: 70px;
+form > * {
+	width: 50%;
+	margin-top: 1em;
+	padding: 1em;
+	font-size: 1em;
 }
 
-.container > div:not(:nth-of-type(1)) { display: inline-block; }
-.container > div:not(:nth-of-type(4)) { display: inline-block; }*/
+input:nth-of-type(3) { height: 150px; }
+submit { height: 50px; }
