--- a/styles/main.css
+++ b/styles/main.css
@@ -23,18 +23,33 @@ h1 {
 }
 
 .data {
-	padding-top: 15%;
+	padding: 2em;
+	margin-top: 15%;
 	font-size: 1.5em;
+	border: 1px solid #E8DDB5;
+	border-radius: 15px;
 }
 
-section:nth-of-type(3) > * { padding: 1em; }
+h2 { padding: 2em; }
 
 form > * {
-	width: 50%;
+	width: 80%;
 	margin-top: 1em;
 	padding: 1em;
 	font-size: 1em;
 }
 
 input:nth-of-type(3) { height: 150px; }
-submit { height: 50px; }
+button { height: 50px; width: 30%; }
+
+
+footer {
+	height: 40px;
+	background-color: #788AA3;
+}
+
+@media (min-width: 480px) {
+    form > * {
+    		width: 50%;
+    }
+}
