--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,9 @@ a {
 	text-decoration: none;
 }
 
-section	{ height: 800px; }
+section	{ 
+	height: 800px;  
+}
 /*section:nth-of-type(1) { background-image: url('../media/images/gold-chain.jpg'); }
 */section:nth-of-type(1) { background-color: white; }
 section:nth-of-type(2) { background-color: white; }
@@ -30,9 +32,7 @@ header, footer {
 	background-color: white;
 }
 
-header {
-	position: fixed;
-}
+header { position: fixed; }
 
 ul, li {
 	display: inline-block;
@@ -58,15 +58,16 @@ h1 {
 h2 {
 	font-size: 3em;
 	padding: 1em 2em;
+	color: silver;
 }
 
-em {
-	font-size: 2em;
-}
+em { font-size: 2em; }
+
 p {
 	font-family: email;
 	font-size: 4em;
 	padding: 1em;
+	color: silver;
 }
 
 #contact-container {
@@ -79,3 +80,5 @@ p {
   -moz-box-shadow: 0px 0px 65px -7px silver;
   box-shadow: 0px 0px 65px -7px silver;
 }
+
+img { width: 30%;}
