--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@ h1 {
 	width: 40%;
 	margin: 10% 25%;
 	padding: 1em;
-	font-size: 1.5em;
+	font-size: 2em;
 	color: silver;
 	background-color: white;
 	-webkit-box-shadow: 0px 0px 65px -7px silver;
@@ -61,7 +61,23 @@ h2 {
 	color: silver;
 }
 
-em { font-size: 2em; }
+h4 {
+	font-size: 3em;
+	padding: 1em 2em;
+	color: lightblue;
+}
+
+em { font-size: 2.5em; }
+
+#seventh {
+	font-size: 2em;
+	color: silver;
+}
+
+#eigth {
+	color: #E8DDB5;
+	font-size: 2em;
+}
 
 p {
 	font-family: email;
