--- a/styles/main.css
+++ b/styles/main.css
@@ -18,9 +18,7 @@ a {
 	text-decoration: none;
 }
 
-section	{ 
-	height: 800px;  
-}
+section	{ height: 800px; }
 /*section:nth-of-type(1) { background-image: url('../media/images/gold-chain.jpg'); }
 */section:nth-of-type(1) { background-color: white; }
 section:nth-of-type(2) { background-color: white; }
@@ -45,7 +43,7 @@ h1 {
 	position: absolute;
 	border: 1px solid silver;
 	width: 40%;
-	margin: 10% 25%;
+	margin: 25% 25%;
 	padding: 1em;
 	font-size: 2em;
 	color: silver;
@@ -88,7 +86,6 @@ p {
 
 #contact-container {
 	border: 1px solid  #E8DDB5;
-	background-color: #faf8ef;
 	opacity: .6;
 	position: absolute;
 	margin: 20% 10%;
