--- a/styles/main.css
+++ b/styles/main.css
@@ -19,9 +19,8 @@ a {
 }
 
 section	{ height: 800px; }
-/*section:nth-of-type(1) { background-image: url('../media/images/gold-chain.jpg'); }
-*/section:nth-of-type(1) { background-color: white; }
-section:nth-of-type(2) { background-color: white; }
+section:nth-of-type(1) { background-image: url('../media/images/handholding1.jpg'); }
+section:nth-of-type(2) { padding-top: 10%; }
 section:nth-of-type(3) { background-image: url('../media/images/contact-background.png'); }
 
 header, footer {
