--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,8 @@ a {
 section	{ height: 800px; }
 section:nth-of-type(1) { background-image: url('../media/images/handholding1.jpg'); }
 section:nth-of-type(2) { padding-top: 10%; }
-section:nth-of-type(3) { background-image: url('../media/images/contact-background.png'); }
+/*section:nth-of-type(3) { background-image: url('../media/images/contact-background.png'); }
+*/section:nth-of-type(3) { background-color: #BFCCD5; }
 
 header, footer {
 	width: 100%;
@@ -42,7 +43,7 @@ h1 {
 	position: absolute;
 	border: 1px solid silver;
 	width: 40%;
-	margin: 25% 25%;
+	margin: 25% 27%;
 	padding: 1em;
 	font-size: 2em;
 	color: silver;
@@ -61,7 +62,7 @@ h2 {
 h4 {
 	font-size: 3em;
 	padding: 1em 2em;
-	color: lightblue;
+	color: #BFCCD5;
 }
 
 em { font-size: 2.5em; }
@@ -85,12 +86,23 @@ p {
 
 #contact-container {
 	border: 1px solid  #E8DDB5;
+	background-color: white;
 	opacity: .6;
 	position: absolute;
-	margin: 20% 10%;
+	margin: 20% 6%;
 	-webkit-box-shadow: 0px 0px 65px -7px silver;
   -moz-box-shadow: 0px 0px 65px -7px silver;
   box-shadow: 0px 0px 65px -7px silver;
 }
 
 img { width: 30%;}
+
+
+@media (min-width: 480px) {
+    h1 {
+       	margin: 15% 25%;
+    }
+    #contact-container {
+    		margin: 15% 18%;
+    }
+}
