--- a/styles/main.css
+++ b/styles/main.css
@@ -14,15 +14,14 @@
 	font: white;
 }
 
-a {
-	text-decoration: none;
-}
+a { text-decoration: none; }
 
 section	{ height: 800px; }
 section:nth-of-type(1) { background-image: url('../media/images/handholding1.jpg'); }
 section:nth-of-type(2) { padding-top: 10%; }
+section:nth-of-type(3) { background-color: #BFCCD5; }
 /*section:nth-of-type(3) { background-image: url('../media/images/contact-background.png'); }
-*/section:nth-of-type(3) { background-color: #BFCCD5; }
+*/
 
 header, footer {
 	width: 100%;
@@ -53,29 +52,19 @@ h1 {
   box-shadow: 0px 0px 65px -7px silver;
 }
 
-h2 {
+h2, h4 {
 	font-size: 3em;
 	padding: 1em 2em;
-	color: silver;
 }
 
-h4 {
-	font-size: 3em;
-	padding: 1em 2em;
-	color: #BFCCD5;
-}
+h2 { color: silver;	}
+h4 { color: #BFCCD5; }
 
 em { font-size: 2.5em; }
 
-#seventh {
-	font-size: 3em;
-	color: silver;
-}
-
-#eigth {
-	color: #E8DDB5;
-	font-size: 3em;
-}
+#seventh, #eigth { font-size: 3em; }
+#seventh { color: silver; }
+#eigth { color: #E8DDB5; }
 
 p {
 	font-family: email;
@@ -83,6 +72,8 @@ p {
 	padding: 1em;
 	color: silver;
 }
+
+#contact-container > p:hover { opacity: .5; }
 
 #contact-container {
 	border: 1px solid  #E8DDB5;
