--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,7 @@
 }
 
 a { text-decoration: none; }
+a:hover { opacity: .5; }
 
 section	{ height: 800px; }
 section:nth-of-type(1) { background-image: url('../media/images/handholding1.jpg'); }
@@ -66,14 +67,13 @@ em { font-size: 2.5em; }
 #seventh { color: silver; }
 #eigth { color: #E8DDB5; }
 
-p {
+p { padding-bottom: 3em; }
+p > a {
 	font-family: email;
 	font-size: 4em;
-	padding: 1em;
 	color: silver;
 }
 
-#contact-container > p:hover { opacity: .5; }
 
 #contact-container {
 	border: 1px solid  #E8DDB5;
