--- a/styles/main.css
+++ b/styles/main.css
@@ -11,8 +11,8 @@
 	text-align: center;
 	font-family: 'Alegreya Sans', sans-serif;
 /*	color: #E8DDB5;*/
-	color: #f9d14a;
-/*	color: #e0c35f;*/
+/*	color: #f9d14a;*/
+	color: #e0c35f;
 }
 
 a { text-decoration: none; }
@@ -87,10 +87,6 @@ p > a {
   box-shadow: 0px 0px 65px -7px #4d4d5a;
 }
 
-/*#contact-container:after {
-	margin: 20% 6%;
-}
-*/
 img { width: 30%;}
 
 
