--- a/styles/main.css
+++ b/styles/main.css
@@ -30,7 +30,7 @@ header, footer {
 	background-color: white;
 }
 
-header { position: fixed; }
+header { position: fixed; z-index: 2; }
 
 ul, li {
 	display: inline-block;
@@ -64,6 +64,7 @@ h2 { color: #4d4d5a;	}
 h4 { color: #4d4d5a; }
 
 em { font-size: 2.5em; }
+i { color: #4d4d5a; }
 
 #seventh, #eigth { font-size: 3em; }
 #seventh { color: #4d4d5a; }
@@ -81,11 +82,18 @@ p > a {
 	border: 1px solid  #E8DDB5;
 	background-color: white;
 	opacity: .6;
-	position: absolute;
 	-webkit-box-shadow: 0px 0px 65px -7px #4d4d5a;
   -moz-box-shadow: 0px 0px 65px -7px #4d4d5a;
   box-shadow: 0px 0px 65px -7px #4d4d5a;
 }
+
+#contact > h4 {
+	margin-top: 5%;
+	position: absolute;
+	font-size: 2em;
+/*	text-shadow: 2px 2px 3px silver;*/
+}
+
 
 img { width: 30%;}
 
@@ -95,6 +103,7 @@ img { width: 30%;}
        	margin: 15% 25%;
     }
     #contact-container {
-    		margin: 15% 18%;
+/*    		margin: 15% 18%;*/
+					height: 1000;
     }
 }
