--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,7 @@ a:hover { opacity: .5; }
 section	{ height: 800px; }
 section:nth-of-type(1) { background-image: url('../media/images/handholding1.jpg'); }
 section:nth-of-type(2) { padding-top: 10%; }
-section:nth-of-type(3) { background-color: #BFCCD5; }
+section:nth-of-type(3) { background-color: #BFCCD5; height: 1000px;}
 
 
 header, footer {
@@ -104,6 +104,8 @@ img { width: 30%;}
     }
     #contact-container {
 /*    		margin: 15% 18%;*/
-					height: 1000;
+    }
+    section:nth-of-type(3) {
+    	height: 800px;
     }
 }
