--- a/styles/main.css
+++ b/styles/main.css
@@ -79,7 +79,7 @@ p > a {
 
 
 #contact-container {
-	border: 1px solid  #E8DDB5;
+	border: 1px solid  #4d4d5a;
 	background-color: white;
 	opacity: .6;
 	-webkit-box-shadow: 0px 0px 65px -7px #4d4d5a;
