--- a/styles/main.css
+++ b/styles/main.css
@@ -89,12 +89,11 @@ p > a {
 	margin-top: 5%;
 	position: absolute;
 	font-size: 2em;
-/*	text-shadow: 2px 2px 3px silver;*/
+	text-shadow: 2px 2px 3px silver;
 }
 
 
 img { width: 30%;}
-
 
 @media (min-width: 480px) {
     h1 {
